Fixing font on mobile menu

--- a/style.css
+++ b/style.css
@@ -882,7 +882,7 @@ div.hamburger-button {text-align: right;}
 }
 
 a.link {
-    font-family: 'Mansory';
+    font-family: 'Mansory Regular', sans-serif;
     text-decoration: none; 
     color: #676767; 
     padding: 3vh 5%;
